# xgrad

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  README.md  setup.cfg  setup.py
.github/workflows/: cpp-checks.yaml  python-checks.yaml  python-package.yaml
cmake/: XGradAddCompileOptions.cmake
cpp/: CMakeLists.txt
cpp/include/xgrad/: core.hpp  math.hpp
cpp/include/xgrad/core/: allclose.hpp  ndarray.hpp  ndshape.hpp  node.hpp  tensor.hpp
cpp/include/xgrad/math/: cos.hpp  cosh.hpp  exp.hpp  log.hpp  negate.hpp  sin.hpp  sinh.hpp  square.hpp  tan.hpp  tanh.hpp
cpp/src/xgrad/core/: allclose.cpp  ndarray.cpp  ndshape.cpp  node.cpp  node.hpp  tensor.cpp  unary_operation.hpp
cpp/src/xgrad/math/: cos.cpp  cos.hpp  cosh.cpp  exp.cpp  log.cpp  negate.cpp  negate.hpp  sin.cpp  sin.hpp  sinh.cpp  square.cpp  square.hpp  tan.cpp  tan.hpp  tanh.cpp
cpp/src/xgrad/utility/: product.hpp  shape_to_strides.hpp
cpp/tests/: CMakeLists.txt
cpp/tests/test_xgrad/: test_backward.hpp
cpp/tests/test_xgrad/test_core/: test_ndarray.cpp  test_ndshape.cpp  test_node.cpp  test_tensor.cpp
cpp/tests/test_xgrad/test_math/: test_cos.cpp  test_cosh.cpp  test_exp.cpp  test_log.cpp  test_negate.cpp  test_sin.cpp  test_sinh.cpp  test_square.cpp  test_tan.cpp  test_tanh.cpp
python/src/: xgrad_wrapper.cpp
python/tests/: conftest.py  test_tensor.py  test_unary_ops.py
python/xgrad/: __init__.py  __init__.pyi  _math.pyi  _tensor.pyi
