[metadata]
name = xgrad
version = attr: xgrad._version.__version__
author = ctgk
author_email = r1135nj54w@gmail.com
description = Gradient computation library
long_description = file: README.md
long_description_content_type = text/markdown
platform = posix
url = https://github.com/ctgk/xgrad

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
package_dir =
    =python

[options.packages.find]
    where = python
    include = xgrad*
    exclude = test*

[options.extras_require]
develop =
    pre-commit
