[metadata]
name = xgrad
version = attr: xgrad._version.__version__
author = ctgk
author_email = r1135nj54w@gmail.com
description = Gradient computation library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = posix
url = https://github.com/ctgk/xgrad

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
package_dir =
    =python
install_requires =
    numpy

[options.packages.find]
where = python
include = xgrad*
exclude = test*

[options.extras_require]
develop =
    pre-commit
    pytest
    pybind11

    # format
    autopep8
    flake8
    flake8-absolute-import
    flake8-broken-line
    flake8-builtins
    flake8-commas
    flake8-docstrings
    flake8-import-order
    flake8-multiline-containers
    flake8-mutable
    pep8-naming

[aliases]
test=pytest

[flake8]
per-file-ignores =
    ; Ignore 'Missing docstring in public module' and 'variable "copyright" is shadowing a python builtin'
    docs/conf.py:A001,D100
    ; Ignore missing docstring in public module, class, method, function, package
    **/tests/*.py:D100,D101,D102,D103,D104
application-import-names = xgrad
import-order-style = google
